# slypi

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: algorithms.rst  conf.py  development.rst  extension.rst  index.rst  installation.rst  introduction.rst  plugins.rst  references.rst  requirements.txt  tutorial.rst  utilities.rst
docs/source/images/: slypi-logo.pptx
example-data/: cb-tabular.dat.csv
example-data/spinodal/: frames.csv  metadata.csv
example-data/spinodal/workdir.15/: out.cahn_hilliard_0.npz  out.cahn_hilliard_1000000.npz  out.cahn_hilliard_10000000.npz  out.cahn_hilliard_10500000.npz  out.cahn_hilliard_11000000.npz  out.cahn_hilliard_11500000.npz  out.cahn_hilliard_12000000.npz  out.cahn_hilliard_12500000.npz  out.cahn_hilliard_13000000.npz  out.cahn_hilliard_13500000.npz  out.cahn_hilliard_14000000.npz  out.cahn_hilliard_14500000.npz  out.cahn_hilliard_1500000.npz  out.cahn_hilliard_15000000.npz  out.cahn_hilliard_15500000.npz  out.cahn_hilliard_16000000.npz  out.cahn_hilliard_16500000.npz  out.cahn_hilliard_17000000.npz  out.cahn_hilliard_17500000.npz  out.cahn_hilliard_18000000.npz  out.cahn_hilliard_18500000.npz  out.cahn_hilliard_19000000.npz  out.cahn_hilliard_19500000.npz  out.cahn_hilliard_2000000.npz  out.cahn_hilliard_20000000.npz  out.cahn_hilliard_20500000.npz  out.cahn_hilliard_21000000.npz  out.cahn_hilliard_21500000.npz  out.cahn_hilliard_22000000.npz  out.cahn_hilliard_22500000.npz  out.cahn_hilliard_23000000.npz  out.cahn_hilliard_23500000.npz  out.cahn_hilliard_24000000.npz  out.cahn_hilliard_24500000.npz  out.cahn_hilliard_2500000.npz  out.cahn_hilliard_25000000.npz  out.cahn_hilliard_25500000.npz  out.cahn_hilliard_26000000.npz  out.cahn_hilliard_26500000.npz  out.cahn_hilliard_27000000.npz  (+61 more)
example-data/spinodal/workdir.18/: out.cahn_hilliard_0.npz  out.cahn_hilliard_1000000.npz  out.cahn_hilliard_10000000.npz  out.cahn_hilliard_10500000.npz  out.cahn_hilliard_11000000.npz  out.cahn_hilliard_11500000.npz  out.cahn_hilliard_12000000.npz  (+94 more)
slypi/: __init__.py
slypi/cca/: upload_csv.py  upload_hdf5.py  upload_random.py
slypi/dac/: upload_gen.py
slypi/ensemble/: __init__.py  convert.py  reduce.py  table.py  utilities.py
slypi/ps/: upload_csv.py
slypi/util/: get_model.py  get_project.py
slypi/vs/: __init__.py  upload_local.py
src/slypi/: __init__.py  pandas_util.py
src/slypi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/integration/: README.md  readme.txt  test-ensemble-convert.py  test-ensemble-reduce.py  test-ensemble-table.py  test-lodestar.py  test-slypi.py  test_slypi.py  test_slypi_tdms.py
tests/unit/: test-ensemble.py
(+2354 files in other folders)
