# to create a .tgz and .whl file from this configuration file use
#
# $ rm -rf dist
# $ python -m build --sdist --wheel
#
# There are optional dependencies, some of which are only available
# on the SRN through nexus.
#
# S. Martin 
# 7/21/25

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slypi"
description = "Slycat python interface."
authors = [
  {name = "Shawn martin"},
  {email = "smartin@sandia.gov"},
]
readme = "README.md"
version = "1.0.8"
license-files = [
    "LICENSE",
]

classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = ["requests", "requests-kerberos",
                "numpy", "scikit-learn", 
                "pandas", "meshio", "imageio[ffmpeg]",
                "matplotlib", "ipyparallel", "cloudpickle",
                "umap-learn", "pyarrow"]

[project.optional-dependencies]
auto = [
    # auto-correlation only works for python <= 3.11.8
    "pymks"
]

[project.scripts]
ps_upload_csv = "slypi.ps.upload_csv:main"
dac_upload_gen = "slycat.dac.upload_gen:main"

[project.urls]
repository = "https://github.com/sandialabs/slypi"
documentation = "https://slypi.readthedocs.io/en/latest/"
